# HoneyBee_Detections

./: CMakeLists.txt  README.md
include/: config.h  videoProcessing.h
src/: main.cpp  videoProcessing.cpp
